--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <title>Rodion N. D&eacute;ev's homepage</title>
 <body>
+  <h3>Rodion N. D&eacute;ev (also spelt Rodion Deev)</h3>
   <p>I am a postdoc at <a href='https://impan.pl'>IMPAN</a>. My mentor is <a href='https://apacz.matinf.uj.edu.pl/users/192-michal-kapustka'>Prof. Micha&#322; Kapustka</a>.</p> 
-  <p>I received my Ph. D. in the Courant Institute. My advisor was <a href='https://cims.nyu.edu/~bogomolo/'>Prof. Fedor Bogomolov</a>.</p>
+  <p>I received my Ph. D. in the Courant Institute in April 2021. My advisor was <a href='https://cims.nyu.edu/~bogomolo/'>Prof. Fedor Bogomolov</a>.</p>
   <p><a href='https://cims.nyu.edu/~rodion/cv.pdf'>CV</a> (old; PDF, 83 kB)</p>
   <p>This site is under construction.</p>
 </body>
