--- a/index.html
+++ b/index.html
@@ -1,8 +1,39 @@
-<title>Rodion N. D&eacute;ev's homepage</title>
+<html>
+<head>
+  <title>Rodion N. D&eacute;ev's homepage</title>
+  <style>
+    body {
+	    background-color: white;
+    }
+ 
+    p {
+	     font-family: monospace;
+	    color: black;
+	    font-size: 16px;
+    }
+
+    a {
+	    color: blue;
+    }
+
+    a:hover {
+	    color: blue;
+      background-color: orange;
+    }
+  </style>
+</head>
 <body>
   <h3>Rodion N. D&eacute;ev (also spelt Rodion Deev)</h3>
   <p>I am a postdoc at <a href='https://impan.pl'>IMPAN</a>. My mentor is Prof. <a href='https://apacz.matinf.uj.edu.pl/users/192-michal-kapustka'>Micha&#322; Kapustka</a>.</p> 
   <p>I received my Ph. D. at <a href='https://cims.nyu.edu/'>Courant Institute</a> in April 2021. My advisor was Prof. <a href='https://cims.nyu.edu/~bogomolo/'>Fedor Bogomolov</a>.</p>
   <p><a href='https://cims.nyu.edu/~rodion/cv.pdf'>CV</a> (old; PDF, 83 kB)</p>
+  <hr />
+  <p><a href='http://arxiv.org/abs/1511.05332'>Compact fibrations with hyperk&auml;hler fibers</a> (2015), arXiv:1511.05332, J. of Geo. &amp; Phys., Vol. 123, Jan. 2018, pp. 372-378</p>
+  <p><a href='http://arxiv.org/abs/1610.06263'>Cousin groups and Hodge structures</a> (2016), arXiv:1610.06263</p>
+  <p><a href='https://cims.nyu.edu/~rodion/papers/2018/02-lalkes/lalkes.pdf'>Liouville&mdash;Arnold connection for Lefschetz&mdash;Kovalev pencils and Eells&mdash;Salamon CR twistors</a> (PDF, 373 kB), in preparation</p>
+  <p><a href='https://arxiv.org/abs/2011.00469'>Sections of Lagrangian fibrations on holomorphically symplectic manifolds and degenerate twistorial deformations</a> (2020), joint w. Fedor Bogomolov and <a href='http://verbit.ru'>Misha Verbitsky</a>, Advances in Mathematics, Volume 405, 27 August 2022, 108479</p>
+  <p><a href='https://arxiv.org/abs/2010.15359'>Haupt&ndash;Kapovich theorem revisited</a> (2020), my PhD thesis.</p>
+  <hr />
   <p>This site is under construction.</p>
 </body>
+</html>
