--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <title>Rodion N. D&eacute;ev's homepage</title>
   <style>
     body {
-	    background-color: white;
+	background-color: white;
     }
  
     p {
-	     font-family: monospace;
-	    color: black;
-	    font-size: 16px;
+	font-family: serif;
+	color: black;
+	font-size: 16px;
     }
 
     a {
-	    color: blue;
+	color: blue;
     }
 
     a:hover {
-	    color: blue;
-      background-color: orange;
+	color: blue;
+      	background-color: orange;
     }
   </style>
 </head>
@@ -29,11 +29,13 @@
   <p><a href='https://cims.nyu.edu/~rodion/cv.pdf'>CV</a> (old; PDF, 83 kB)</p>
   <hr />
   <p>My papers on <a href='https://arxiv.org/find/math/1/au:+Deev_R/0/1/0/all/0/1'>arXiv</a></p>
-  <p><a href='http://arxiv.org/abs/1511.05332'>Compact fibrations with hyperk&auml;hler fibers</a> (2015), arXiv:1511.05332, J. of Geo. &amp; Phys., Vol. 123, Jan. 2018, pp. 372-378</p>
-  <p><a href='http://arxiv.org/abs/1610.06263'>Cousin groups and Hodge structures</a> (2016), arXiv:1610.06263</p>
-  <p><a href='https://cims.nyu.edu/~rodion/papers/2018/02-lalkes/lalkes.pdf'>Liouville&mdash;Arnold connection for Lefschetz&mdash;Kovalev pencils and Eells&mdash;Salamon CR twistors</a> (PDF, 373 kB), in preparation</p>
-  <p><a href='https://arxiv.org/abs/2011.00469'>Sections of Lagrangian fibrations on holomorphically symplectic manifolds and degenerate twistorial deformations</a> (2020), joint w. Fedor Bogomolov and <a href='http://verbit.ru'>Misha Verbitsky</a>, Advances in Mathematics, Volume 405, 27 August 2022, 108479</p>
-  <p><a href='https://arxiv.org/abs/2010.15359'>Haupt&ndash;Kapovich theorem revisited</a> (2020), my PhD thesis.</p>
+  <p><ul>
+	<li> <a href='http://arxiv.org/abs/1511.05332'>Compact fibrations with hyperk&auml;hler fibers</a> (2015), arXiv:1511.05332, J. of Geo. &amp; Phys., Vol. 123, Jan. 2018, pp. 372-378
+  	<li> <a href='http://arxiv.org/abs/1610.06263'>Cousin groups and Hodge structures</a> (2016), arXiv:1610.06263
+  	<li> <a href='https://cims.nyu.edu/~rodion/papers/2018/02-lalkes/lalkes.pdf'>Liouville&mdash;Arnold connection for Lefschetz&mdash;Kovalev pencils and Eells&mdash;Salamon CR twistors</a> (PDF, 373 kB), in preparation
+  	<li> <a href='https://arxiv.org/abs/2011.00469'>Sections of Lagrangian fibrations on holomorphically symplectic manifolds and degenerate twistorial deformations</a> (2020), joint w. Fedor Bogomolov and <a href='http://verbit.ru'>Misha Verbitsky</a>, Advances in Mathematics, Volume 405, 27 August 2022, 108479
+  	<li> <a href='https://arxiv.org/abs/2010.15359'>Haupt&ndash;Kapovich theorem revisited</a> (2020), my PhD thesis.
+  </ul></p>
   <hr />
   <p>This site is under construction.</p>
 </body>
