--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <p>I received my Ph. D. at <a href='https://cims.nyu.edu/'>Courant Institute</a> in April 2021. My advisor was Prof. <a href='https://cims.nyu.edu/~bogomolo/'>Fedor Bogomolov</a>.</p>
   <p><a href='https://cims.nyu.edu/~rodion/cv.pdf'>CV</a> (old; PDF, 83 kB)</p>
   <hr />
-  <p>My papers on <a href='https://arxiv.org/find/math/1/au:+Deev_R/0/1/0/all/0/1'>arXiv</a></p>
+  <p>my papers on <a href='https://arxiv.org/find/math/1/au:+Deev_R/0/1/0/all/0/1'>arXiv</a> and beyond:</p>
   <p><ul>
 	<li> <a href='http://arxiv.org/abs/1511.05332'>Compact fibrations with hyperk&auml;hler fibers</a> (2015), arXiv:1511.05332, J. of Geo. &amp; Phys., Vol. 123, Jan. 2018, pp. 372-378
   	<li> <a href='http://arxiv.org/abs/1610.06263'>Cousin groups and Hodge structures</a> (2016), arXiv:1610.06263
