--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <img src='me.jpeg' align=right width=350px />
   <h3>Rodion N. D&eacute;ev (also spelt Rodion Deev)</h3>
   <p>I am a postdoc at <a href='https://impan.pl'>IMPAN</a> in Warsaw. My mentor is Prof. <a href='https://apacz.matinf.uj.edu.pl/users/192-michal-kapustka'>Micha&#322; Kapustka</a>.</p> 
-  <p>I received my Ph. D. at <a href='https://cims.nyu.edu/'>Courant Institute</a> in April 2021. My advisor was Prof. <a href='https://cims.nyu.edu/~bogomolo/'>Fedor Bogomolov</a>.</p>
+  <p>I obtained my Ph. D. at <a href='https://cims.nyu.edu/'>Courant Institute</a> in April 2021. My advisor was Prof. <a href='https://cims.nyu.edu/~bogomolo/'>Fedor Bogomolov</a>.</p>
   <p><a href='/cv.pdf'>CV</a> (PDF, 86 kB)</p>
   <hr />
   <p>my papers on <a href='https://arxiv.org/find/math/1/au:+Deev_R/0/1/0/all/0/1'>arXiv</a> and beyond:</p>
