--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
   <p><ul>
 	<li> <a href='http://arxiv.org/abs/1511.05332'>Compact fibrations with hyperk&auml;hler fibers</a> (2015), arXiv:1511.05332, J. of Geo. &amp; Phys., Vol. 123, Jan. 2018, pp. 372-378
   	<li> <a href='http://arxiv.org/abs/1610.06263'>Cousin groups and Hodge structures</a> (2016), arXiv:1610.06263
-  	<li> <a href='https://cims.nyu.edu/~rodion/papers/2018/02-lalkes/lalkes.pdf'>Liouville&mdash;Arnold connection for Lefschetz&mdash;Kovalev pencils and Eells&mdash;Salamon CR twistors</a> (PDF, 373 kB), in preparation
+  	<li> (<a href='https://cims.nyu.edu/~rodion/papers/2018/02-lalkes/lalkes.pdf'>Liouville&mdash;Arnold connection for Lefschetz&mdash;Kovalev pencils and Eells&mdash;Salamon CR twistors</a> (PDF, 373 kB), postponed)
   	<li> <a href='https://arxiv.org/abs/2011.00469'>Sections of Lagrangian fibrations on holomorphically symplectic manifolds and degenerate twistorial deformations</a> (2020), joint w. Fedor Bogomolov and <a href='http://verbit.ru'>Misha Verbitsky</a>, Advances in Mathematics, Volume 405, 27 August 2022, 108479
   	<li> <a href='https://arxiv.org/abs/2010.15359'>Haupt&ndash;Kapovich theorem revisited</a> (2020), my PhD thesis.
-	<li> <a href='/knots-2022-08-22.pdf'>Holomorphic families of knots</a> (PDF, 324 kB), joint w. <a href='https://arxiv.org/find/math/1/au:+Rogov_V/0/1/0/all/0/1'>Vasily Rogov</a>, in preparation
+	<li> (<a href='/knots-2022-08-22.pdf'>Holomorphic families of knots</a> (PDF, 324 kB), joint w. <a href='https://arxiv.org/find/math/1/au:+Rogov_V/0/1/0/all/0/1'>Vasily Rogov</a>, postponed)
+	<li> Bizarre contractions and relative isogenies, joint w. <a href='https://apacz.matinf.uj.edu.pl/users/192-michal-kapustka'>Micha&#322; Kapustka</a>, in preparation
+	<li> Surfaces with many algebraic structures, joint w. <a href='http://math.columbia.edu/~anabasheva/'>Anna Abasheva</a>, in preparation
   </ul></p>
   <hr />
   <p>This site is under construction.</p>
