--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 	<li> Surfaces with many algebraic structures, joint w. <a href='http://math.columbia.edu/~anabasheva/'>Anna Abasheva</a>, in preparation
   </ul></p>
   <hr />
+  <p>my non-papers:</p>
+  <p><ul>
+	<li> <a href='https://syg.ma/@deevrod/na-smiert-manina'>To the Death of Manin</a>, a necrologue (in Russian)
+  </ul></p>
   <p>This site is under construction.</p>
 </body>
 </html>
