--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <hr />
   <p>my non-papers:</p>
   <p><ul>
-	<li> <a href='https://syg.ma/@deevrod/na-smiert-manina'>To the Death of Manin</a>, a necrologue (in Russian)
+	<li> <a href='https://syg.ma/@deevrod/na-smiert-manina'>To the Death of Manin</a>, an obituary (in Russian)
   </ul></p>
   <p>This site is under construction.</p>
 </body>
