--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   	<li> (<a href='https://cims.nyu.edu/~rodion/papers/2018/02-lalkes/lalkes.pdf'>Liouville&mdash;Arnold connection for Lefschetz&mdash;Kovalev pencils and Eells&mdash;Salamon CR twistors</a> (PDF, 373 kB), postponed)
   	<li> <a href='https://arxiv.org/abs/2011.00469'>Sections of Lagrangian fibrations on holomorphically symplectic manifolds and degenerate twistorial deformations</a> (2020), joint w. Fedor Bogomolov and <a href='http://verbit.ru'>Misha Verbitsky</a>, Advances in Mathematics, Volume 405, 27 August 2022, 108479
   	<li> <a href='https://arxiv.org/abs/2010.15359'>Haupt&ndash;Kapovich theorem revisited</a> (2020), my PhD thesis.
-	<li> <a href='https://arxiv.org/abs/2303.10764'>Complex surfaces with many algebraic structures</a> (2023), joint w. <a href='http://math.columbia.edu/~anabasheva/'>Anna Abasheva</a>
+	<li> <a href='https://arxiv.org/abs/2303.10764'>Complex surfaces with many algebraic structures</a> (2023), arXiv:2303.10764, joint w. <a href='http://math.columbia.edu/~anabasheva/'>Anna Abasheva</a>
 	<li> (<a href='/knots-2022-08-22.pdf'>Holomorphic families of knots</a> (PDF, 324 kB), joint w. <a href='https://arxiv.org/find/math/1/au:+Rogov_V/0/1/0/all/0/1'>Vasily Rogov</a>, postponed)
 	<li> Bizarre contractions and relative isogenies, joint w. Micha&#322; Kapustka, in preparation
   </ul></p>
