--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   	<li> <a href='https://arxiv.org/abs/2011.00469'>Sections of Lagrangian fibrations on holomorphically symplectic manifolds and degenerate twistorial deformations</a> (2020), joint w. Fedor Bogomolov and <a href='http://verbit.ru'>Misha Verbitsky</a>, Advances in Mathematics, Volume 405, 27 August 2022, 108479
   	<li> <a href='https://arxiv.org/abs/2010.15359'>Haupt&ndash;Kapovich theorem revisited</a> (2020), my PhD thesis.
 	<li> <a href='https://arxiv.org/abs/2303.10764'>Complex surfaces with many algebraic structures</a> (2023), arXiv:2303.10764, joint w. <a href='http://math.columbia.edu/~anabasheva/'>Anna Abasheva</a>
-	<li> Bizarre contractions and relative isogenies, joint w. Micha&#322; Kapustka, in preparation
+	<li> Rational curves with unexpected behaviour, joint w. Micha&#322; Kapustka, in preparation
   </ul></p>
   <p>postponed projects:</p>
   <p><ul>
