--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -5,7 +5,7 @@
     <hr />
     <p>
       <ul>
-        <li>20 ноября 2023</li>
+        <li>20 ноября 2023: <a href='23-11-20-curves-and-dedekind.pdf'>алгебраические свойства координатных колец аффинных кривых</a></li>
       </ul>
     </p>
   </body>
