--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -6,6 +6,7 @@
     <p>
       <ul>
         <li>20 ноября 2023: <a href='23-11-20-curves-and-dedekind.pdf'>алгебраические свойства координатных колец аффинных кривых</a>. Изучены слайды 1&mdash;8.</li>
+        <li>24 ноября 2023: <a href='23-11-24-quasi-finiteness.pdf'>конечные и квазиконечные отображения</a>. Изучены слайды 1&mdash;4.</li>
       </ul>
     </p>
   </body>
