--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -8,6 +8,8 @@
         <li>20 ноября 2023: <a href='23-11-20-curves-and-dedekind.pdf'>алгебраические свойства координатных колец аффинных кривых</a>. Изучены слайды 1&mdash;8.</li>
         <li>24 ноября 2023: <a href='23-11-24-quasi-finiteness.pdf'>конечные и квазиконечные отображения</a>. Изучены слайды 1&mdash;4.</li>
         <li>27 ноября 2023: <a href='23-11-27-noetherian-localisation.pdf'>нетеровость и локализация</a>. Изучены слайды 1&mdash;4.</li>
+        <li>1 декабря 2023: повторение</li>
+        <li>4 декабря 2023: <a href='23-12-04-sheaves.pdf'>открытые множества и язык пучков</a>. Язык пучков затронут не был.</li>
       </ul>
     </p>
   </body>
