--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -10,6 +10,7 @@
         <li>27 ноября 2023: <a href='23-11-27-noetherian-localisation.pdf'>нетеровость и локализация</a>. Изучены слайды 1&mdash;4.</li>
         <li>1 декабря 2023: повторение.</li>
         <li>4 декабря 2023: <a href='23-12-04-sheaves.pdf'>открытые множества и язык пучков</a>. Язык пучков затронут не был.</li>
+        <li>8 декабря 2023: <a href='23-12-07-local-hensel.pdf'>локальные кольца и лемма Гензеля</a>.</li>
       </ul>
     </p>
   </body>
