--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -11,6 +11,7 @@
         <li>1 декабря 2023: повторение.</li>
         <li>4 декабря 2023: <a href='23-12-04-sheaves.pdf'>открытые множества и язык пучков</a>. Язык пучков затронут не был.</li>
         <li>8 декабря 2023: <a href='23-12-07-local-hensel.pdf'>локальные кольца и лемма Гензеля</a>.</li>
+        <li>11 декабря 2023: <a href='23-12-11-valuations.pdf'>валюации и нормирования</a>.</li>
       </ul>
     </p>
   </body>
