--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -13,6 +13,7 @@
         <li>8 декабря 2023: <a href='23-12-07-local-hensel.pdf'>локальные кольца и лемма Гензеля</a>.</li>
         <li>11 декабря 2023: <a href='23-12-11-valuations.pdf'>валюации и нормирования</a>.</li>
         <li>18 декабря 2023: <a href='23-12-18-riemann-zariski.pdf'>пространства Римана&ndash;Зариского</a>.</li>
+        <li>22 декабря 2023: <a href='23-12-22-blow-ups.pdf'>проективные пространства и раздутия</a>. Изучены слайды 1&mdash;6.</li>
       </ul>
     </p>
   </body>
