--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -8,12 +8,16 @@
         <li>20 ноября 2023: <a href='23-11-20-curves-and-dedekind.pdf'>алгебраические свойства координатных колец аффинных кривых</a>. Изучены слайды 1&mdash;8.</li>
         <li>24 ноября 2023: <a href='23-11-24-quasi-finiteness.pdf'>конечные и квазиконечные отображения</a>. Изучены слайды 1&mdash;4.</li>
         <li>27 ноября 2023: <a href='23-11-27-noetherian-localisation.pdf'>нетеровость и локализация</a>. Изучены слайды 1&mdash;4.</li>
-        <li>1 декабря 2023: повторение.</li>
+        <li>1 декабря 2023: повторение</li>
         <li>4 декабря 2023: <a href='23-12-04-sheaves.pdf'>открытые множества и язык пучков</a>. Язык пучков затронут не был.</li>
-        <li>8 декабря 2023: <a href='23-12-07-local-hensel.pdf'>локальные кольца и лемма Гензеля</a>.</li>
-        <li>11 декабря 2023: <a href='23-12-11-valuations.pdf'>валюации и нормирования</a>.</li>
-        <li>18 декабря 2023: <a href='23-12-18-riemann-zariski.pdf'>пространства Римана&ndash;Зариского</a>.</li>
+        <li>8 декабря 2023: <a href='23-12-07-local-hensel.pdf'>локальные кольца и лемма Гензеля</a></li>
+        <li>11 декабря 2023: <a href='23-12-11-valuations.pdf'>валюации и нормирования</a></li>
+        <li>15 декабря 2023: отмена занятия</li>
+        <li>18 декабря 2023: <a href='23-12-18-riemann-zariski.pdf'>пространства Римана&ndash;Зариского</a></li>
         <li>22 декабря 2023: <a href='23-12-22-blow-ups.pdf'>проективные пространства и раздутия</a>. Изучены слайды 1&mdash;6.</li>
+        <li>25 декабря 2023: повторение</li>
+        <li>29 декабря 2023: Новый год</li>
+        <li>1 января 2024: Новый год</li>
       </ul>
     </p>
   </body>
