--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -18,6 +18,12 @@
         <li>25 декабря 2023: повторение</li>
         <li>29 декабря 2023: Новый год</li>
         <li>1 января 2024: Новый год</li>
+        <li>5 января 2024: отмена занятия</li>
+        <li>8 января 2024: отмена занятия</li>
+        <li>12 января 2024: повторение</li>
+        <li>15 января 2024: отмена занятия</li>
+        <li>19 января 2024: повторение</li>
+        <li>22 января 2024: <a href='24-01-22-normal-curves.pdf'>нормальные кривые гладки</a>. Изучены слайды 1&mdash;6.</li>
       </ul>
     </p>
   </body>
