--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -25,6 +25,8 @@
         <li>19 января 2024: повторение</li>
         <li>22 января 2024: <a href='24-01-22-normal-curves.pdf'>нормальные кривые гладки</a>. Изучены слайды 1&mdash;6.</li>
         <li>26 января 2024: <a href='24-01-26-krull.pdf'>теория размерности нетеровых колец</a></li>
+        <li>29 января 2024: отмена занятия</li>
+        <li>2 февраля 2024: <a href='24-02-02-artin.pdf'>артиновы кольца и теорема Крулля о пересечении</a></li>
       </ul>
     </p>
   </body>
