--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -27,6 +27,8 @@
         <li>26 января 2024: <a href='24-01-26-krull.pdf'>теория размерности нетеровых колец</a></li>
         <li>29 января 2024: отмена занятия</li>
         <li>2 февраля 2024: <a href='24-02-02-artin.pdf'>артиновы кольца и теорема Крулля о пересечении</a></li>
+        <li>5 февраля 2024: <a href='24-02-05-dedekind-class-group.pdf'>дедекиндовы кольца и группа классов</a>. Также изучены слайды 16&mdash;20 из <a href='23-11-20-curves-and-dedekind.pdf'>первого занятия</a>.</li>
+        <li>9 февраля 2024: отмена занятия</li>
       </ul>
     </p>
   </body>
