--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -30,6 +30,8 @@
         <li>2 февраля 2024: <a href='24-02-02-artin.pdf'>артиновы кольца и теорема Крулля о пересечении</a></li>
         <li>5 февраля 2024: <a href='24-02-05-dedekind-class-group.pdf'>дедекиндовы кольца и группа классов</a>. Также изучены слайды 16&mdash;20 из <a href='23-11-20-curves-and-dedekind.pdf'>первого занятия</a>.</li>
         <li>9 февраля 2024: отмена занятия</li>
+        <li>12 февраля 2024: <a href='24-02-12-modules-bundles.pdf'>проективные модули и векторные расслоения</a>. Последний слайд изучен не полностью.</li>
+        <li>16 февраля 2024: отмена занятия</li>
       </ul>
     </p>
   </body>
