--- a/alg-geo-2023/video/index.html
+++ b/alg-geo-2023/video/index.html
@@ -3,6 +3,6 @@
   <body>
     <p>У некоторых лекций имеются видеозаписи, на этой странице они собраны для удобства.</p>
     <hr />
-    <p><iframe width="420" height="315" src="https://www.youtube.com/embed/UdQeCVl7GbY"></iframe></p>
+    <p>5 февраля 2024: дедекиндовы кольца и группа классов<br /><iframe width="420" height="315" src="https://www.youtube.com/embed/UdQeCVl7GbY"></iframe></p>
   </body>
 </html>
