--- a/alg-geo-2023/video/index.html
+++ b/alg-geo-2023/video/index.html
@@ -1,7 +1,7 @@
 <html>
   <title>Algebraic geometry (video, in Russian)</title>
   <body>
-    <p>У некоторых <a href='/index.html'>лекций</a> имеются видеозаписи, на этой странице они собраны для удобства.</p>
+    <p>У некоторых <a href='../index.html'>лекций</a> имеются видеозаписи, на этой странице они собраны для удобства.</p>
     <hr />
     <p>
       <ul>
