--- a/alg-geo-2023/video/index.html
+++ b/alg-geo-2023/video/index.html
@@ -5,8 +5,8 @@
     <hr />
     <p>
       <ul>
-        <li>5 февраля 2024: дедекиндовы кольца и группа классов<br /><br /><iframe width="840" height="630" src="https://www.youtube.com/embed/UdQeCVl7GbY"></iframe><hr /></li>
-        <li>12 февраля 2024: проективные модули и векторные расслоения<br /><br /><iframe width="840" height="630" src="https://www.youtube.com/embed/haz0dbGwArs"></iframe></li>
+        <li>5 февраля 2024: дедекиндовы кольца и группа классов<br /><br /><iframe width="840" height="630" src="https://www.youtube.com/embed/UdQeCVl7GbY" allowfullscreen></iframe><hr /></li>
+        <li>12 февраля 2024: проективные модули и векторные расслоения<br /><br /><iframe width="840" height="630" src="https://www.youtube.com/embed/haz0dbGwArs" allowfullscreen></iframe></li>
       </ul></p>
   </body>
 </html>
