--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -33,6 +33,7 @@
         <li>12 февраля 2024: <a href='24-02-12-modules-bundles.pdf'>проективные модули и векторные расслоения</a>. Последний слайд изучен не полностью.</li>
         <li>16 февраля 2024: отмена занятия</li>
         <li>19 февраля 2024: <a href='24-02-19-divisors-and-bundles.pdf'>дивизоры и линейные расслоения</a></li>
+        <li>23 февраля 2024: отмена занятия</li>
       </ul>
     </p>
   </body>
