--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -34,6 +34,7 @@
         <li>16 февраля 2024: отмена занятия</li>
         <li>19 февраля 2024: <a href='24-02-19-divisors-and-bundles.pdf'>дивизоры и линейные расслоения</a></li>
         <li>23 февраля 2024: отмена занятия</li>
+        <li>26 февраля 2024: <a href='24-02-26-linear-systems.pdf'>вложения линейными системами</a>. Изучены слайды 1&mdash;3.</li>
       </ul>
     </p>
   </body>
