--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -35,6 +35,8 @@
         <li>19 февраля 2024: <a href='24-02-19-divisors-and-bundles.pdf'>дивизоры и линейные расслоения</a></li>
         <li>23 февраля 2024: отмена занятия</li>
         <li>26 февраля 2024: <a href='24-02-26-linear-systems.pdf'>вложения линейными системами</a>. Изучены слайды 1&mdash;3.</li>
+        <li>1 марта 2024: отмена занятия</li>
+        <li>4 марта 2024: вложения линейными системами. Изучены слайды 3&mdash;6.</li>
       </ul>
     </p>
   </body>
