--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -29,14 +29,11 @@
         <li>29 января 2024: отмена занятия</li>
         <li>2 февраля 2024: <a href='24-02-02-artin.pdf'>артиновы кольца и теорема Крулля о пересечении</a></li>
         <li>5 февраля 2024: <a href='24-02-05-dedekind-class-group.pdf'>дедекиндовы кольца и группа классов</a>. Также изучены слайды 16&mdash;20 из <a href='23-11-20-curves-and-dedekind.pdf'>первого занятия</a>.</li>
-        <li>9 февраля 2024: отмена занятия</li>
         <li>12 февраля 2024: <a href='24-02-12-modules-bundles.pdf'>проективные модули и векторные расслоения</a>. Последний слайд изучен не полностью.</li>
-        <li>16 февраля 2024: отмена занятия</li>
         <li>19 февраля 2024: <a href='24-02-19-divisors-and-bundles.pdf'>дивизоры и линейные расслоения</a></li>
-        <li>23 февраля 2024: отмена занятия</li>
         <li>26 февраля 2024: <a href='24-02-26-linear-systems.pdf'>вложения линейными системами</a>. Изучены слайды 1&mdash;3.</li>
-        <li>1 марта 2024: отмена занятия</li>
         <li>4 марта 2024: вложения линейными системами. Изучены слайды 3&mdash;6.</li>
+        <li>11 марта 2024: <a href='24-03-11-systems-of-quadrics.pdf'>линейные системы и рациональные поверхности</a></li>
       </ul>
     </p>
   </body>
