--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -33,7 +33,7 @@
         <li>19 февраля 2024: <a href='24-02-19-divisors-and-bundles.pdf'>дивизоры и линейные расслоения</a></li>
         <li>26 февраля 2024: <a href='24-02-26-linear-systems.pdf'>вложения линейными системами</a>. Изучены слайды 1&mdash;3.</li>
         <li>4 марта 2024: вложения линейными системами. Изучены слайды 3&mdash;6.</li>
-        <li>11 марта 2024: <a href='24-03-11-systems-of-quadrics.pdf'>линейные системы и рациональные поверхности</a>. На последний слайд времени не хватило</li>
+        <li>11 марта 2024: <a href='24-03-11-systems-of-quadrics.pdf'>линейные системы и рациональные поверхности</a>. На последний слайд времени не хватило.</li>
         <li>18 марта 2024: <a href='24-03-18-normal-blowdown.pdf'>нормальные расслоения и сдутия кривых</a></li>
       </ul>
     </p>
