--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -35,6 +35,8 @@
         <li>4 марта 2024: вложения линейными системами. Изучены слайды 3&mdash;6.</li>
         <li>11 марта 2024: <a href='24-03-11-systems-of-quadrics.pdf'>линейные системы и рациональные поверхности</a>. На последний слайд времени не хватило.</li>
         <li>18 марта 2024: <a href='24-03-18-normal-blowdown.pdf'>нормальные расслоения и сдутия кривых</a></li>
+        <li>25 марта 2024: отмена занятия</li>
+        <li>1 апреля 2024: <a href='24-04-01-neron-severi.pdf'>решетка Нерона&nbsp;&mdash; Севери</a>. Изучены слайды 1&mdash;3.</li>
       </ul>
     </p>
   </body>
