--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -4,7 +4,7 @@
     <p>Заметки онлайн-чтений по алгебраической геометрии. Основные референсы&nbsp;&mdash; Шафаревич и Фултон (книжка про кривые).</p>
     <hr />
     <p>
-      По слайдам имеется также <a href='https://www.overleaf.com/read/pwtckhtwzbrn#a44573'>путеводитель</a>, а у некоторых лекций имеются <a href='video/index.html'>видеозаписи</a>.
+      По слайдам имеется также <a href='https://www.overleaf.com/read/pwtckhtwzbrn#a44573'>путеводитель</a>, а у некоторых лекций имеются <a href='https://www.youtube.com/playlist?list=PLm_kSxxTmUaUNMQAODGKdwwuLv0Jjc_YC'>видеозаписи</a>.
       <ul>
         <li>20 ноября 2023: <a href='23-11-20-curves-and-dedekind.pdf'>алгебраические свойства координатных колец аффинных кривых</a>. Изучены слайды 1&mdash;8.</li>
         <li>24 ноября 2023: <a href='23-11-24-quasi-finiteness.pdf'>конечные и квазиконечные отображения</a>. Изучены слайды 1&mdash;4.</li>
