--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -37,6 +37,7 @@
         <li>18 марта 2024: <a href='24-03-18-normal-blowdown.pdf'>нормальные расслоения и сдутия кривых</a></li>
         <li>25 марта 2024: отмена занятия</li>
         <li>1 апреля 2024: <a href='24-04-01-neron-severi.pdf'>решетка Нерона&nbsp;&mdash; Севери</a>. Изучены слайды 1&mdash;3.</li>
+        <li>8 апреля 2024: повторение</li>
       </ul>
     </p>
   </body>
