--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -38,6 +38,7 @@
         <li>25 марта 2024: отмена занятия</li>
         <li>1 апреля 2024: <a href='24-04-01-neron-severi.pdf'>решетка Нерона&nbsp;&mdash; Севери</a>. Изучены слайды 1&mdash;3.</li>
         <li>8 апреля 2024: повторение</li>
+        <li>15 апреля 2024: повторение и частичное обсуждение якобиана</li>
       </ul>
     </p>
   </body>
