--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -39,6 +39,7 @@
         <li>1 апреля 2024: <a href='24-04-01-neron-severi.pdf'>решетка Нерона&nbsp;&mdash; Севери</a>. Изучены слайды 1&mdash;3.</li>
         <li>8 апреля 2024: повторение</li>
         <li>15 апреля 2024: повторение и частичное обсуждение якобиана</li>
+        <li>22 апреля 2024: когомологии Чеха. Слайдов не было.</li>
       </ul>
     </p>
   </body>
