--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -40,6 +40,13 @@
         <li>8 апреля 2024: повторение</li>
         <li>15 апреля 2024: повторение и частичное обсуждение якобиана</li>
         <li>22 апреля 2024: когомологии Чеха. Слайдов не было.</li>
+        <li>29 апреля 2024: <a href='24-04-15-jacobian.pdf'>немного про якобиан</a></li>
+        <li>6 мая 2024: повторение</li>
+        <li>13 мая 2024: повторение</li>
+        <li>20 мая 2024: пропуск занятия</li>
+        <li>27 мая 2024: длинная точная последовательность когомологий. Слайдов не было</li>
+        <li>3 июня 2024: первый класс Черна и его алгебраические аппроксимации. Слайдов не было.</li>
+        <li>14 июня 2024: <a href='24-06-10-birkhoff.pdf'>когомологии расслоений на кривых</a>. Изучено все до начала 4-го слайда.</li>
       </ul>
     </p>
   </body>
