--- a/alg-geo-2023/index.html
+++ b/alg-geo-2023/index.html
@@ -46,7 +46,12 @@
         <li>20 мая 2024: пропуск занятия</li>
         <li>27 мая 2024: длинная точная последовательность когомологий. Слайдов не было</li>
         <li>3 июня 2024: первый класс Черна и его алгебраические аппроксимации. Слайдов не было.</li>
-        <li>14 июня 2024: <a href='24-06-10-birkhoff.pdf'>когомологии расслоений на кривых</a>. Изучено все до начала 4-го слайда.</li>
+        <li>17 июня 2024: <a href='24-06-10-birkhoff.pdf'>когомологии расслоений на кривых</a>. Изучено все до начала 4-го слайда.</li>
+        <li>24 июня 2024: повторение</li>
+        <li>1 июля 2024: пропуск занятия</li>
+        <li>8 июля 2024: <a href='24-07-08-adeles.pdf'>адели на кривых и двойственность Серра</a></li>
+        <li>15 июля 2024: пропуск занятия</li>
+        <li>22 июля 2024: <a href='24-07-15-serre.pdf'>адели на кривых и двойственность Серра&ndash;2</a>. Изучено все до начала 4-го слайда.</li>
       </ul>
     </p>
   </body>
